# agentchat

./: .gitignore  Makefile  README.md  docker-compose.yml
agent/: .env.example  Dockerfile  agent.yaml  pyproject.toml  run_agent.py
agent/.claude/skills/create-artifact/: SKILL.md
agent/.claude/skills/create-artifact/evals/: evals.json
api/: .env.example  Dockerfile  main.py  pyproject.toml  run.py
api/core/: agents.py  config.py  storage.py  utils.py
api/core/sandbox/: __init__.py  firecracker.py  modal.py  sandbox.py  subprocess.py  types.py
api/migrations/versions/: 001_initial_schema.py  002_add_artifacts.py
api/models/: chat.py
api/routes/: chat.py  sessions.py
api/routes/schemas/: __init__.py  artifact.py  chat.py  session.py  usage.py
docs/: blog.md
infra/terraform/: ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  security_groups.tf  variables.tf  vpc.tf
infra/terraform/templates/: user-data.sh.tpl
orchestrator/: auth.py  config.py  main.py  models.py  network.py  pyproject.toml  rootfs.py  vm_manager.py
orchestrator/systemd/: orchestrator.service
scripts/: build-kernel.sh  build-rootfs.sh  upload-rootfs.sh
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
