[project]
name = "orchestrator"
version = "0.1.0"
description = "Firecracker VM orchestrator service"
requires-python = ">= 3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "boto3",
    "asyncssh",
    "pydantic-settings",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
